--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,14 @@ header {
     padding: 10px 15px 20px 25px;
     background-color: #39a6b2;
   }
+
+  header h1 {
+    font-weight: bold;
+    font-size: 36px;
+    color: #fce138;
+    margin: 0;
+  }
+  
+  header a {
+    color: #fce138;
+  }
