--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
+
 body {
 /* more on this crazy alphanumerical value in a minute! */
-color: #39a6b2
+    color: #39a6b2
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -15,9 +20,33 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    display: inline;
   }
   
   header a {
     text-decoration: none;
     color: #fce138;
+  }
+
+  header nav {
+    float: right;
+    margin: 7px 0;
+  }
+
+  header nav ul li {
+    display: inline;
+  }
+
+  header nav ul li a {
+    margin: 0 30px;
+    font-weight: lighter;
+    font-size: 22px;
+  }
+
+  body h2 {
+    font-weight: bold;
+    font-size: 22px;
+    color: #39a6b2;
+    margin: 0;
+    
   }
