--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
   }
 
   body {
+  /* more on this crazy alphanumerical value in a minute! */    
     font-family: Helvetica, Arial, sans-serif;
-    background-color: tomato;
   }
 
 /* apply styles to <header> */
