--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,3 +230,36 @@ header {
     font-size: 17px;
     line-height: 1.3;
   }
+
+  .contact {
+    text-align: center;
+    background-color: #024e76;
+    overflow: auto;
+  }
+
+  .contact h2 {
+    color: #fce138;
+  }
+
+  .contact-info iframe {
+    width: 400px;
+    height: 400px;
+    float: left;
+  }
+
+  .contact h3 {
+    color: #39a6b2;
+  }
+
+  .contact a {
+    color: #fce138;
+  }
+
+  .contact-info div {
+    width: 410px;
+    display:inline-table;
+    vertical-align: top;
+    text-align: left;
+    padding: 60px 0 30px 0;
+    color: white;
+  }
