--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,8 +233,7 @@ header {
 
   .contact {
     text-align: center;
-    background-color: #024e76;
-    overflow: auto;
+    background: #024e76;
   }
 
   .contact h2 {
@@ -244,22 +243,29 @@ header {
   .contact-info iframe {
     width: 400px;
     height: 400px;
-    float: left;
-  }
-
-  .contact h3 {
-    color: #39a6b2;
-  }
-
-  .contact a {
-    color: #fce138;
   }
 
   .contact-info div {
     width: 410px;
-    display:inline-table;
+    display: inline-block;
     vertical-align: top;
     text-align: left;
-    padding: 60px 0 30px 0;
+    margin: 30px 0 0 60px;
     color: white;
+  }
+
+  .contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  
+  .contact-info a {
+    color: #fce138;
   }
