--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,9 @@
 
 /* apply styles to <header> */
 header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 10px 15px 20px 25px;
     background-color: #39a6b2;
   }
@@ -20,7 +23,6 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
   }
   
   header a {
@@ -29,7 +31,6 @@ header {
   }
 
   header nav {
-    float: right;
     margin: 7px 0;
   }
 
