--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ header {
   }
 
   .intro {
-    text-align: center;
+    
   }
 
   .intro p {
@@ -156,10 +156,10 @@ header {
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
+    text-align: center;
   }
 
   .steps {
-    text-align: center;
     background: #fce138;
   }
 
@@ -167,9 +167,10 @@ header {
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
-    padding: 0px 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -205,7 +206,7 @@ header {
   }
 
   .trainers {
-    text-align: center;
+    
   }
 
   .trainer {
@@ -235,6 +236,10 @@ header {
     text-align: right;
   }
 
+  .flex-row {
+    display: flex;
+  }
+
   .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -252,7 +257,6 @@ header {
   }
 
   .contact {
-    text-align: center;
     background: #024e76;
   }
 
